先备份-工行SDK开发

--- a/src/main/resources/static/OrderManagementSystem/commerce-add.html
+++ b/src/main/resources/static/OrderManagementSystem/commerce-add.html
@@ -412,7 +412,7 @@ $(function(){
 
             $.ajax({
                 type: 'POST',
-                url: "http://localhost:9417/Commerce/AddCommerce",
+                url: "/Commerce/AddCommerce",
                 data:{
                     comName:comName,
                     comSimpleName:comSimpleName,
