--- a/src/main/resources/static/OrderManagementSystem/food-edit.html
+++ b/src/main/resources/static/OrderManagementSystem/food-edit.html
@@ -860,7 +860,7 @@
 
             //加载数据
             $.ajax({
-                url: "http://localhost:9417/Food/GetOneFoodInfo?foodGuid="+getUrlParam("foodGuid"),
+                url: "/Food/GetOneFoodInfo?foodGuid="+getUrlParam("foodGuid"),
                 type: 'GET',
                 // beforeSend: function(request) {
                 //     request.setRequestHeader("Access-Token", localStorage.getItem("user_token"));
@@ -950,7 +950,7 @@
         formData.append("food_status", $("input[type='checkbox']").is(':checked'));
 
         $.ajax({
-            url: "http://localhost:9417/OrderManagementSystem/UpdateFoodData",
+            url: "/OrderManagementSystem/UpdateFoodData",
             type: 'POST',
             data:formData,
             cache: false,
