--- a/src/main/resources/static/OrderManagementSystem/index.html
+++ b/src/main/resources/static/OrderManagementSystem/index.html
@@ -313,7 +313,7 @@
     function Logout() {
         var token = localStorage.getItem("user_token");
         $.ajax({
-            url: "http://localhost:8080/sys/logout",
+            url: "/sys/logout",
             type: 'GET',
             async: false,
             beforeSend: function (request) {
