--- a/src/main/resources/static/OrderManagementSystem/order-list-pay.html
+++ b/src/main/resources/static/OrderManagementSystem/order-list-pay.html
@@ -116,7 +116,7 @@
             }
         },
         //
-        "ajax": "http://localhost:9417/Order/GetAllOrderInPayStatus?orderPayStatus=1",
+        "ajax": "/Order/GetAllOrderInPayStatus?orderPayStatus=1",
         "columns": [
             // { "data": "orderGuid", "render": function(data,type,row,meta){
             //         return data = '<tr class="text-c"><td><input name="" type="checkbox" value="'+data+'"></td>';
@@ -224,7 +224,7 @@
     function picture_stop(obj, id) {
         layer.confirm('确认要下架吗？', function (index) {
             $.ajax({
-                url: "http://localhost:9417/Food/UpdateFoodStatus",
+                url: "/Food/UpdateFoodStatus",
                 type: 'GET',
                 data:{
                     foodStatus:0,
@@ -283,7 +283,7 @@
     function picture_start(obj, id) {
         layer.confirm('确认要使用吗？', function (index) {
             $.ajax({
-                url: "http://localhost:9417/Food/UpdateFoodStatus",
+                url: "/Food/UpdateFoodStatus",
                 type: 'GET',
                 data:{
                     foodStatus:1,
@@ -372,7 +372,7 @@
         layer.confirm('确认要删除吗？', function (index) {
             $.ajax({
                 type: 'POST',
-                url: "http://localhost:9417/Order/DeleteOrder",
+                url: "/Order/DeleteOrder",
                 data:{
                     orderGuid:id,
                     orderSid:sid
@@ -435,7 +435,7 @@
             });
             $.ajax({
                 type: 'GET',
-                url: "http://localhost:9417/Food/BatchDeleteFood",
+                url: "/Food/BatchDeleteFood",
                 data:{
                     cidList:JSON.stringify(checked_array),
                 },
