--- a/src/main/resources/static/OrderManagementSystem/food-add.html
+++ b/src/main/resources/static/OrderManagementSystem/food-add.html
@@ -912,7 +912,7 @@ function reviseSubmit () {
         foodStatus=1;
 	}
     $.ajax({
-        url: "http://localhost:9417/Food/AddFondDefaultImage",
+        url: "/Food/AddFondDefaultImage",
         type: 'POST',
         data:{
             foodName:$("#food_name").val(),
